# MSE10HN_BDA_G3

./: .gitignore  README.md  docker-compose.yml
backend/: .env  pyproject.toml
backend/src/: db.py  events.py  main.py  models.py
click_analytics/: click_analysis.py
nginx/: Dockerfile  error.html
nginx/conf/: default.conf
secrets/: db-password.txt  spark-env.txt
